tests/errors/invalid_uescapeN.pyx
# mode: error

u'\N{GIBBET NICH}'

_ERRORS = '''
3:2: Unknown Unicode character name 'GIBBET NICH'
'''
